RESOLVED FIXED269821
[WebGPU] Buffer index is not validated prior to metal compilation
https://bugs.webkit.org/show_bug.cgi?id=269821
Summary [WebGPU] Buffer index is not validated prior to metal compilation
Mike Wyrzykowski
Reported 2024-02-20 16:28:12 PST
[WebGPU] Buffer index is not validated prior to metal compilation
Attachments
Mike Wyrzykowski
Comment 1 2024-02-20 16:29:01 PST
Mike Wyrzykowski
Comment 2 2024-02-20 17:21:20 PST
EWS
Comment 3 2024-02-21 10:45:11 PST
Committed 275112@main (3fc81749e677): <https://commits.webkit.org/275112@main> Reviewed commits have been landed. Closing PR #24849 and removing active labels.
Mike Wyrzykowski
Comment 4 2024-02-27 11:51:29 PST
*** Bug 269801 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.