[WebGPU] Buffer index is not validated prior to metal compilation https://bugs.webkit.org/show_bug.cgi?id=269821 <radar://123322561>

Reviewed by Dan Glastonbury.

WGSL allows any buffer to be used, but we need to fail
pipeline creation if the buffer index in the WGSL is too
large.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::RewriteGlobalVariables):
(WGSL::RewriteGlobalVariables::run):
(WGSL::buffersForStage):
(WGSL::RewriteGlobalVariables::collectGlobals):
(WGSL::rewriteGlobalVariables):
* Source/WebGPU/WGSL/GlobalVariableRewriter.h:
* Source/WebGPU/WGSL/WGSL.cpp:
(WGSL::prepareImpl):

Canonical link: https://commits.webkit.org/275112@main